# cppcoretools

./: CMakeLists.txt  README.md  USAGE.md
cppcoretools/: error_and.h  print.h  scoped_timer.h
tests/: main.cpp
